add subscriptions
